--- a/partials/mainView.html
+++ b/partials/mainView.html
@@ -1,3 +1,4 @@
+      <div class="container">
          <div class="col-md-9">
 
                 <div class="thumbnail">
@@ -6,23 +7,13 @@
                 
                         <h4 class="underLine4">Academy Rating and Review </h4>
 
-                        <p>In this web site you can <span style="font-weight: bold">Rank & Review</span> courses in your academy.</p>
+                        <p>In this web site you can <span style="font-weight: bold">Rank  Review</span> courses in your academy.</p>
             
                         <p> <span style="font-weight: bold">Pay attention!</span> </p>
                         <p>Every rank which you do can insult or hurt someone, so please pay attention to your ranking.</p>
                        <p>Try to be gantle because behaid every rank that you did sit a humen with feeling.</p>
                     </div>
-            <!--     <div class="ratings">
-                        <p class="pull-right">3 reviews</p>
-                        <p>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
-                            4.0 stars
-                        </p>
-                    </div> -->
+
                 </div>
 
                 <div class="well">
@@ -79,3 +70,5 @@
                 </div>
 
             </div>
+            </div>
+
