added selected combobox

--- a/partials/RankingLecturer.html
+++ b/partials/RankingLecturer.html
@@ -5,7 +5,7 @@
 <div class="col-md-9">
 
                <div class="thumbnail" style="border-radius: 25px">
-               <span id="headerPage">Academy/Faculty Rank</span>
+               <span id="headerPage">	Course/Lecturer Rank</span>
                   <img id="imagerank" class="img-responsive " src="images/rating.jpg" alt="">
                     <div class="caption-full">
 						<hr>
@@ -121,9 +121,9 @@
 									<span style="margin-left: 12px"> Enter Name:</span> <input style="margin-left: 12px" type="text" >
 								</span>
 							</div>
-								<a id="RankAcademyBut" style=" margin-right : 60px" class="btn btn-primary"> 
+								<a style="margin-right: 12px" id="RankAcademyBut" class="btn btn-primary"> 
 									Rank The Faculty
-									<span style="margin-top: 40px"></span>
+
 								</a>
 
 							</div>
