--- a/partials/mainView.html
+++ b/partials/mainView.html
@@ -2,7 +2,7 @@
          <div class="col-md-9">
 
                 <div class="thumbnail">
-                    <img class="img-responsive" src="images/academy.png" alt="">
+                    <img class="img-responsive" src="images/academy.png" alt=""> </img>
                     <div class="caption-full">
                 
                         <h4 class="underLine4">Academy Rating and Review </h4>
