--- a/partials/RankAcademy.html
+++ b/partials/RankAcademy.html
@@ -5,12 +5,14 @@
 <div class="col-md-9">
 
                <div class="thumbnail" style="border-radius: 25px">
-               <span id="headerPage">Academy/Faculty Rank</span>
+               <span id="headerPage">	Academy/Faculty Rank</span>
                   <img id="imagerank" class="img-responsive " src="images/rating.jpg" alt="">
                     <div class="caption-full" data-ng-controller="RankLecturerCont">
 
-                    <p class="detailsAcademy">Academy: </p>
-                    <p class="detailsAcademy">Faculty: </p>
+                    <div data-ng-controller="mainControler">
+                    	<p class="detailsAcademy" id="detailsAcademyId" >Academy: </p>
+                    	<p class="detailsFaculty" id="detailsFacultyId">Faculty: </p>
+                    </div>
 						<hr>
 <!--First Q-->
 
@@ -24,11 +26,11 @@
 
                 		
           				<form >
-							 <input style="margin-left:60px" type="radio" name="gender" value="1" checked> 
- 							 <input style="margin-left:60px" type="radio" name="gender" value="2"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="3"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="4"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="5"> 
+							 <input style="margin-left:60px" type="radio" name="gender1" value="1" checked> 
+ 							 <input style="margin-left:60px" type="radio" name="gender1" value="2"> 
+  							 <input style="margin-left:60px" type="radio" name="gender1" value="3"> 
+  							 <input style="margin-left:60px" type="radio" name="gender1" value="4"> 
+  							 <input style="margin-left:60px" type="radio" name="gender1" value="5"> 
 						</form>
 
 						
@@ -48,11 +50,11 @@
 
                 		
           				<form >
-							 <input style="margin-left:60px" type="radio" name="gender" value="1" checked> 
- 							 <input style="margin-left:60px" type="radio" name="gender" value="2"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="3"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="4"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="5"> 
+							 <input style="margin-left:60px" type="radio" name="gender2" value="1" checked> 
+ 							 <input style="margin-left:60px" type="radio" name="gender2" value="2"> 
+  							 <input style="margin-left:60px" type="radio" name="gender2" value="3"> 
+  							 <input style="margin-left:60px" type="radio" name="gender2" value="4"> 
+  							 <input style="margin-left:60px" type="radio" name="gender2" value="5"> 
 						</form>
 
 						
@@ -73,11 +75,11 @@
 						<span style="margin-left:65px"><span style="color:blue">5</span></span>
     		
           				<form >
-							 <input style="margin-left:60px" type="radio" name="gender" value="1" checked> 
- 							 <input style="margin-left:60px" type="radio" name="gender" value="2"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="3"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="4"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="5"> 
+							 <input style="margin-left:60px" type="radio" name="gender3" value="1" checked> 
+ 							 <input style="margin-left:60px" type="radio" name="gender3" value="2"> 
+  							 <input style="margin-left:60px" type="radio" name="gender3" value="3"> 
+  							 <input style="margin-left:60px" type="radio" name="gender3" value="4"> 
+  							 <input style="margin-left:60px" type="radio" name="gender3" value="5"> 
 						</form>
 		
 					<span style="font-size: 10px"><span style="color: blue"><span style="margin-left:45px "> Very Easy</span></span></span>
@@ -96,11 +98,11 @@
 
                 		
           				<form >
-							 <input style="margin-left:60px" type="radio" name="gender" value="1" checked> 
- 							 <input style="margin-left:60px" type="radio" name="gender" value="2"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="3"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="4"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="5"> 
+							 <input style="margin-left:60px" type="radio" name="gender4" value="1" checked> 
+ 							 <input style="margin-left:60px" type="radio" name="gender4" value="2"> 
+  							 <input style="margin-left:60px" type="radio" name="gender4" value="3"> 
+  							 <input style="margin-left:60px" type="radio" name="gender4" value="4"> 
+  							 <input style="margin-left:60px" type="radio" name="gender4" value="5"> 
 						</form>
 
 						
