--- a/partials/RankAcademy.html
+++ b/partials/RankAcademy.html
@@ -11,12 +11,12 @@
 
                     <div data-ng-controller="mainControler">
                     	<p class="detailsAcademy" id="detailsAcademyId" >Academy: </p>
-                    	<p class="detailsFaculty" id="detailsFacultyId">Faculty: </p>
+                    	<p class="detailsAcademy" id="detailsFacultyId">Faculty: </p>
                     </div>
 						<hr>
 <!--First Q-->
 
-					<p class="Qestion" ><span class="Qheader">1.Course Level:</span><br><span class="Qinternal"> How much effort you need to do to get high grade?</span></p>
+					<p class="Qestion" ><span class="Qheader">1.How difficult in your academic?</span><br><span class="Qinternal"> There are faculties which sit on the lawn all day long, while other places have to "sweat" to get the degree.</span></p>
 
 						<span style="margin-left:60px"><span style="color:blue">1</span></span>
 						<span style="margin-left:70px"><span style="color:blue">2</span></span>
@@ -40,7 +40,9 @@
                 		<hr>
 
 <!--Second Q-->
-					<p class="Qestion"><span class="Qheader">2.Lecturer attitude:</span><br><span class="Qinternal">Does the lecturer reveals willingness to help to students?Does the lecturer answer questions in class?</span></p>
+					<p class="Qestion"><span class="Qheader">2.Students Characteristics:</span><br><span class="Qinternal">In some faculties there is a 			competition between students,
+      				    lack of assistance to the photographs, works, exercises, etc.,
+    				    compared to other faculties where everyone helps each other, How is it with you?</span></p>
 
 						<span style="margin-left:60px"><span style="color:blue">1</span></span>
 						<span style="margin-left:70px"><span style="color:blue">2</span></span>
@@ -65,7 +67,8 @@
 
 <!--third Q-->
 
-					<p class="Qestion"><span class="Qheader">3.Lecturer Motivation:</span><br><span class="Qinternal">There are meny lecturers who do not invest properly in teaching and not ready to come to the lecture. This parameter indicateson the ability of the lecturer to transfer educational material clearly.</span></p>
+					<p class="Qestion"><span class="Qheader">3.Secretary Attitude:</span><br><span class="Qinternal">Secretary and Faculty management should give you the students a kind and professional service.
+    			    But between theory and action may be a long gap.</span></p>
 
 
 						<span style="margin-left:60px"><span style="color:blue">1</span></span>
@@ -87,7 +90,8 @@
                 		          <hr>
 
 <!--Forth Q-->
-					<p class="Qestion"><span class="Qheader">4.Does the lecturer interesting?</span><br><span class="Qinternal">What is the interest level in lectuers?Does the lecturer transfer the educational material in an interesting or boring way?</span></p>
+					<p class="Qestion"><span class="Qheader">4.Students Union:</span><br><span class="Qinternal">We all know that there are many students 	unions that working hard for students,
+      				   and there are those who do nothing, how your students union??</span></p>
 
 
 						<span style="margin-left:60px"><span style="color:blue">1</span></span>
@@ -110,6 +114,30 @@
                 		<span style="margin-left:250px "><span style="font-size: 10px"><span style="color: blue">Very Hard</span></span></span>
                 		              		<hr>
 
+<!--fifth Q-->
+					<p class="Qestion"><span class="Qheader">5.Social Life</span><br><span class="Qinternal">Are you socially fun in academy? (Parties, social evenings, Cafeteria, breaks on the lawn).
+    			    Because those are beautiful years, we would also like to enjoy!</span></p>
+
+
+						<span style="margin-left:60px"><span style="color:blue">1</span></span>
+						<span style="margin-left:70px"><span style="color:blue">2</span></span>
+						<span style="margin-left:65px"><span style="color:blue">3</span></span>
+						<span style="margin-left:64px"><span style="color:blue">4</span></span>
+						<span style="margin-left:65px"><span style="color:blue">5</span></span>
+
+                		
+          				<form >
+							 <input style="margin-left:60px" type="radio" name="gender" value="1" checked> 
+ 							 <input style="margin-left:60px" type="radio" name="gender" value="2"> 
+  							 <input style="margin-left:60px" type="radio" name="gender" value="3"> 
+  							 <input style="margin-left:60px" type="radio" name="gender" value="4"> 
+  							 <input style="margin-left:60px" type="radio" name="gender" value="5"> 
+						</form>
+
+						
+					<span style="font-size: 10px"><span style="color: blue"><span style="margin-left:45px "> Very Easy</span></span></span>
+                		<span style="margin-left:250px "><span style="font-size: 10px"><span style="color: blue">Very Hard</span></span></span>
+                	<hr>
 <!--few words-->
 
 							<p class="Qestion"><span class="Qheader">Few words:</span></p>
