--- a/css/star.css
+++ b/css/star.css
@@ -10,6 +10,16 @@
   color:rgb(32, 125, 255);
 }
 
+
+#headerPageC{
+  font-style: italic;
+  margin-left: 250px;
+  font-size: 60px;
+  color:rgb(32, 125, 255);
+}
+
+
+
 .Qestion{
   font-style: italic;
   color: rgb(32, 125, 255);
