--- a/partials/ViewAcademyRaiting.html
+++ b/partials/ViewAcademyRaiting.html
@@ -1,3 +1,55 @@
+ <link href="css/AcademyCss.css" rel="stylesheet">
+<div class="container">
+<div class="row ">
+<div class="col-md-9">
+ <div class="thumbnail" id="FrameViewAcadmy">
+<div class="caption-full" style="width: 900px" >
+
+
+
+<span id="headerPageW">Watch rating reviews</span>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <div>
-	<h3 id="myHeader">View Academy raiting</h3>
-</div>
+	<table class="table table-bordered" id="tableA">
+  <thead  style="color: rgb(32, 125, 255);">
+    <tr>
+      <th>#</th>
+      <th>Reviewer</th>
+      <th>Rank Date</th>
+      <th>Academy difficulty</th>
+      <th>Student character</th>
+      <th>Social life</th>
+      <th>Faculty secretary</th>
+      <th>Studert's union</th>
+      <th style="width: 900px">Few words</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+      <td>@mdo</td>
+      <td>@mdo</td>
+      <td>@mdo</td>
+      <td>@mdo</td>
+      <td>hi how are u ok so i am very happy</td>
+    </tr>
+
+  </tbody>
+</table>
+</div></div></div></div></div></div>
