--- a/partials/RankingLecturer.html
+++ b/partials/RankingLecturer.html
@@ -5,12 +5,15 @@
 <div class="col-md-9">
 
                <div class="thumbnail" style="border-radius: 25px">
-               <span id="headerPage">Academy/Faculty Rank</span>
+               <span id="headerPageC">Course Rank</span>
                   <img id="imagerank" class="img-responsive " src="images/rating.jpg" alt="">
                     <div class="caption-full">
 
                     <p class="detailsAcademy">Academy: </p>
                     <p class="detailsAcademy">Faculty: </p>
+                    <p class="detailsAcademy">Semster: </p>
+                    <p class="detailsAcademy">Lecturer: </p>
+                    <p class="detailsAcademy">Course: </p>
 						<hr>
 <!--First Q-->
 
