added watch review

--- a/partials/ViewAcademyRaiting.html
+++ b/partials/ViewAcademyRaiting.html
@@ -9,16 +9,24 @@
 
 <span id="headerPageW">Watch rating reviews</span>
 
+<img id="imgWatch" class="img-responsive " src="images/strank.jpg" alt="">
+
+<hr>
+
+                    <p class="detailsRAcademy">Academy: </p>
+                    <p class="detailsRAcademy">Faculty: </p>
+                    <p class="detailsRAcademy">Academy difficulty (Avg): </p>
+                    <p class="detailsRAcademy">Student character (Avg): </p>
+                    <p class="detailsRAcademy">Social life (Avg): </p>
+ 				    <p class="detailsRAcademy">Faculty secretary (Avg): </p>
+                    <p class="detailsRAcademy">Studert's union (Avg): </p>
 
 
 
 
 
 
-
-
-
-
+<hr>
 
 
 
