--- a/css/AcademyCss.css
+++ b/css/AcademyCss.css
@@ -9,8 +9,24 @@
 }
 
 #headerPageW{
+
   font-style: italic;
-  margin-left: 190px;
+  margin-left: 100px;
   font-size: 60px;
   color:rgb(32, 125, 255);
+}
+
+
+#imgWatch{
+
+  margin-left: 180px;
+  width: 500px;
+  height: 120px;
+}
+
+
+.detailsRAcademy{
+	color : rgb(32, 125, 255);
+	text-decoration: underline;
+	font-weight: bold;
 }
