--- a/partials/ViewLecturerRaiting.html
+++ b/partials/ViewLecturerRaiting.html
@@ -1,4 +1,59 @@
-<div>
-	<h4 id="myHeader">View Lecturer raiting</h4>
+ <link href="css/AcademyCss.css" rel="stylesheet">
+<div class="container">
+<div class="row ">
+<div class="col-md-9">
+ <div class="thumbnail" id="FrameViewAcadmy">
+<div class="caption-full" style="width: 900px" >
 
-</div>
+
+
+<span id="headerPageW">Watch rating reviews</span>
+
+<img id="imgWatch" class="img-responsive " src="images/strank.jpg" alt="">
+
+<hr>
+
+                    <p class="detailsRAcademy">Academy: </p>
+                    <p class="detailsRAcademy">Faculty: </p>
+                    <p class="detailsRAcademy">Lectuerer: </p>
+                    <p class="detailsRAcademy">Course: </p>
+                    <p class="detailsRAcademy">Reviewers number: </p>
+                    <p class="detailsRAcademy">Course level (Avg): </p>
+                    <p class="detailsRAcademy">Lecturer atitude(Avg): </p>
+                    <p class="detailsRAcademy">Motivation to teach (Avg): </p>
+ 				    <p class="detailsRAcademy">Faculty secretary (Avg): </p>
+                    <p class="detailsRAcademy">Lecturer Intersting (Avg): </p>
+
+<hr>
+
+
+
+<div>
+	<table class="table table-bordered" id="tableA">
+  <thead  style="color: rgb(32, 125, 255);">
+    <tr>
+      <th>#</th>
+      <th>Reviewer</th>
+      <th>Rank Date</th>
+      <th>Course level</th>
+      <th>Lecturer atitude</th>
+      <th>Motivation to teach</th>
+      <th>Lecturer Intersting </th>
+      <th style="width: 900px">Few words</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+      <td>@mdo</td>
+      <td>@mdo</td>
+      <td>@mdo</td>
+      <td>hi how are u ok so i am very happy</td>
+    </tr>
+
+  </tbody>
+</table>
+</div></div></div></div></div></div>
