--- a/partials/RankAcademy.html
+++ b/partials/RankAcademy.html
@@ -159,11 +159,10 @@
 								</span>
 							
 							
-
 							</div>
 							<hr>
 							<span style="margin-left: 300px">
-								<a id="RankAcademyBut"  class="btn btn-primary" data-ng-click="RankClickLecturer('RankClickLecturer')">
+								<a id="RankAcademyBut"  class="btn btn-primary" data-ng-click="RankClickAcademy('RankClickAcademy')">
 									Rank The Faculty
 								</a></span>
                     	</div>
