--- a/partials/RankingLecturer.html
+++ b/partials/RankingLecturer.html
@@ -36,11 +36,11 @@
 
                 		
           				<form >
-							 <input style="margin-left:60px" type="radio" name="gender" value="1" checked> 
- 							 <input style="margin-left:60px" type="radio" name="gender" value="2"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="3"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="4"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="5"> 
+							 <input style="margin-left:60px" type="radio" id="ch1" name="gender1" value="1" checked> 
+ 							 <input style="margin-left:60px" type="radio" name="gender1" value="2"> 
+  							 <input style="margin-left:60px" type="radio" name="gender1" value="3"> 
+  							 <input style="margin-left:60px" type="radio" name="gender1" value="4"> 
+  							 <input style="margin-left:60px" type="radio" name="gender1" value="5"> 
 						</form>
 
 						
@@ -60,11 +60,11 @@
 
                 		
           				<form >
-							 <input style="margin-left:60px" type="radio" name="gender" value="1" checked> 
- 							 <input style="margin-left:60px" type="radio" name="gender" value="2"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="3"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="4"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="5"> 
+							 <input style="margin-left:60px" type="radio" id="ch1" name="gender2" value="1" checked> 
+ 							 <input style="margin-left:60px" type="radio" name="gender2" value="2"> 
+  							 <input style="margin-left:60px" type="radio" name="gender2" value="3"> 
+  							 <input style="margin-left:60px" type="radio" name="gender2" value="4"> 
+  							 <input style="margin-left:60px" type="radio" name="gender2" value="5"> 
 						</form>
 
 						
@@ -85,11 +85,11 @@
 						<span style="margin-left:65px"><span style="color:blue">5</span></span>
     		
           				<form >
-							 <input style="margin-left:60px" type="radio" name="gender" value="1" checked> 
- 							 <input style="margin-left:60px" type="radio" name="gender" value="2"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="3"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="4"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="5"> 
+							 <input style="margin-left:60px" type="radio" id="ch1" name="gender3" value="1" checked> 
+ 							 <input style="margin-left:60px" type="radio" name="gender3" value="2"> 
+  							 <input style="margin-left:60px" type="radio" name="gender3" value="3"> 
+  							 <input style="margin-left:60px" type="radio" name="gender3" value="4"> 
+  							 <input style="margin-left:60px" type="radio" name="gender3" value="5"> 
 						</form>
 		
 					<span style="font-size: 10px"><span style="color: blue"><span style="margin-left:45px "> Very Easy</span></span></span>
@@ -108,11 +108,11 @@
 
                 		
           				<form >
-							 <input style="margin-left:60px" type="radio" name="gender" value="1" checked> 
- 							 <input style="margin-left:60px" type="radio" name="gender" value="2"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="3"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="4"> 
-  							 <input style="margin-left:60px" type="radio" name="gender" value="5"> 
+							 <input style="margin-left:60px" type="radio" id="ch1" name="gender4" value="1" checked> 
+ 							 <input style="margin-left:60px" type="radio" name="gender4" value="2"> 
+  							 <input style="margin-left:60px" type="radio" name="gender4" value="3"> 
+  							 <input style="margin-left:60px" type="radio" name="gender4" value="4"> 
+  							 <input style="margin-left:60px" type="radio" name="gender4" value="5"> 
 						</form>
 
 						
@@ -125,7 +125,7 @@
 							<p class="Qestion"><span class="Qheader">Few words:</span></p>
 
 							<div class="form-group">
-							  <textarea class="form-control" rows="4" id="comment"></textarea>
+							  <textarea class="form-control" rows="4" id="commentFewWord"></textarea>
 							</div>
 
 							<div class="row">
@@ -134,7 +134,7 @@
 							<input style="margin-left: 12px" type="checkbox" checked="checked" id="AnnonymosCheck" onChange="check(this)"><span class="Qestion"> Annonymos	</span> 
 
 								<span style="display: none" id="Ename" >
-									<span style="margin-left: 12px" class="questions"><span style="color: rgb(32, 125, 255)"> Enter Name:</span></span> <input style="margin-left: 12px" type="text" >
+									<span style="margin-left: 12px" class="questions"><span style="color: rgb(32, 125, 255)"> Enter Name:</span></span> <input style="margin-left: 12px" type="text" id="textName" >
 								</span>
 							
 							
@@ -142,8 +142,8 @@
 							</div>
 							<hr>
 							<span style="margin-left: 300px">
-								<a id="RankAcademyBut"  class="btn btn-primary"> 
-									Rank The Faculty
+								<a id="RankLecturerBut"  class="btn btn-primary" data-ng-click="RankClickLecturer('RankClickLecturer')"> 
+									Rank The Lecturer
 								</a></span>
                     </div>
                     </div>
